issue #75: updated service and added basic architecture for spring server